  * backends/packaging-apt-dpkg.py: Utilize a release and architecture specific
    contents mapping.
  * test/test_backend_apt_dpkg.py: Update the test as we are using a contents
    mapping.
  * test/test_report.py: remove unused import of gzip.
  * apport/ui.py: Write an UnreportableReason for snaps and provide information
    on how to contact a snap developer. (LP: #1729491)

2.20.11 (2019-05-16)
--------------------
  * SECURITY UPDATE: Ensure that we propely handle crashes that originate from
    a PID namespace. Thanks to Sander Bos for discovering this issue.
    (CVE-2018-6552, LP: #1746668)
  * backends/packaging-apt-dpkg.py: switch to using python3-launchpadlib to
    communicate with Launchpad thereby gaining retry capabilities and using its
    cache.
  * backends/packaging-apt-dpkg.py: utilize a global mapping of files to
    packages instead of searching a Contents.gz file multiple times,
    additionally write this mapping to disk so subsequent lookups and retraces
    are quicker. (LP: #1370230)
  * apport/ui.py: Handle old reports generated pre-apport with "remember"
    option. If the option isn't there, consider as false. (LP: #1791324)
  * apport/report.py: End our gdb batch script with a separator, to accomodate
    new exit codes from gdb 8.2.50. Thanks Steve Langasek!
  * data/apport: Introduce support for non-positional arguments so we
    can easily extend core_pattern in the future (LP: #1732962)
  * apport/report.py: Have add_gdb_info return a FileNotFoundError if gdb or
    the crashing executable are not found and modify whoopsie-upload-all to
    upload crashes in that situation. (LP: #1820132)
  * apport/report.py, apport/ui.py: raise ValueError if the pid is not
    accessible, display an error message for that or an invalid pid. (LP: #1396160)
  * switch from pyflakes to pyflakes3, drop some python2 code
  * backends/packaging-apt-dpkg.py: strip /usr from binary names so the .list
    file will match.