@@ -21,6 +21,10 @@ import problem_report
 def help():
     print(_('Usage: %s <report> <target directory>') % sys.argv[0])
 
+if sys.version[0] < '3':
+    t_str = unicode
+else:
+    t_str = str
 
 gettext.textdomain('apport')
 
@@ -60,7 +64,7 @@ for k in pr:
         bin_keys.append(k)
         continue
     with open(os.path.join(dir, k), 'wb') as f:
-        if type(pr[k]) == str:
+        if type(pr[k]) == t_str:
             f.write(pr[k].encode('UTF-8'))
         else:
             f.write(pr[k])
